Sakura background updates

--- a/sources/backgrounds/sakura-background/sakura-background.html
+++ b/sources/backgrounds/sakura-background/sakura-background.html
@@ -33,8 +33,8 @@
             --accent-color-2: #b6e9d1; /* Soft mint green */
             
             /* Background colors */
-            --bg-color-1: rgba(255, 243, 230, 0.3); /* Soft cream */
-            --bg-color-2: rgba(209, 231, 240, 0.3); /* Soft sky blue */
+            --bg-color-1: #d0e8cf; /* Light, serene green */
+            --bg-color-2: #a3c4bc; /* Soft, muted green */
             
             /* Edge decoration settings */
             --edge-width: 200px; /* Width of the edge decorations */
