--- a/sources/backgrounds/ascii/psychedelic-ASCII.html
+++ b/sources/backgrounds/ascii/psychedelic-ASCII.html
@@ -32,9 +32,9 @@
       font-weight:var(--weight);
       letter-spacing:var(--ls);
       line-height:var(--lh);
-      /* gradient-in-text; no rotation */
-      background: conic-gradient(from 0deg,
-        #ff004c, #ff8a00, #ffe600, #29ff00, #00ffe1, #008cff, #b300ff, #ff004c);
+      /* more muted palette with neutrals, grays, purples, pinks, browns, and beige tones; no rotation */
+      background: linear-gradient(135deg,
+        #2c2c2c, #4b3b47, #7a5c61, #a8896c, #d1c7b7, #a88fa0, #6b5c6e, #2c2c2c);
       background-size:200% 200%;
       -webkit-background-clip:text;
       background-clip:text;
@@ -54,10 +54,10 @@
   (() => {
     // -------- Params --------
     const q = new URLSearchParams(location.search);
-    const FONT_SIZE  = +(q.get('fs')      || 12);    // glyph size (px)
+    const FONT_SIZE  = +(q.get('fs')      || 16);    // glyph size (px), increased for more negative space
     const TARGET_FPS = +(q.get('fps')     || 24);    // frame cap
     const SPEED      = +(q.get('speed')   || 1.0);
-    const DENSITY    = +(q.get('density') || 1.0);   // 0.7..1.3
+    const DENSITY    = +(q.get('density') || 0.7);   // 0.7..1.3; lowered for less detail and more negative space
     const CONTRAST   = +(q.get('contrast')|| 1.0);   // 0.7..1.4
     const MODE       = (q.get('mode')     || 'low'); // 'low' | 'high'
     const SPARKLE    = +(q.get('sparkle') || 0);     // 0/1
